# table_tennis

./: .gitignore  Makefile.am  NEWS  README  configure.ac  do_all_in_one_step.sh
Documentation/: Makefile.am
lib/: Makefile.am  helper.c  libgame.h  libgame_private.h
man/: Makefile.am  table_tennis.1
po/: POTFILES.in  de.po
src/: .gitignore  Makefile.am  main.c
